Fix hidden scrollbar issue

--- a/tribute-page/style.css
+++ b/tribute-page/style.css
@@ -15,6 +15,23 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Scrollbar Chrome */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 0, 0, 0.7);
+}
+
 body {
   margin: 0;
   display: flex;
@@ -201,28 +218,4 @@ hr {
   height: 1px;
   border: none;
   background-color: rgba(255, 0, 0, 0.4);
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 5px;
-}
-::-webkit-scrollbar:hover {
-  box-sizing: border-box;
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgba(255, 0, 0, 0.5);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 0, 0, 0.7);
 }
